--- a/front/index.html
+++ b/front/index.html
@@ -30,7 +30,7 @@
 <body >
 
 <div class="col-md-8 col-lg-offset-2">
-   <span><img src="assets/images/logo.png" alt=""></span<h2>Tech mining graph</h2>
+   <span><img src="assets/images/logo.png" alt=""></span><h2>Tech mining graph</h2>
 </div>
 
 <div class="container container-fluid" ng-view>
