--- a/front/index.html
+++ b/front/index.html
@@ -25,12 +25,17 @@
 
 <script src="app/app.js"></script>
 <script src="app/config.js"></script>
+<script src="app/directives.js"></script>
+
+<!--  ng-include files -->
 
 
 <!-- controllers -->
 
 <script src="app/mainController.js"></script>
 <script src="app/components/searchBar/searchBarController.js"></script>
+<script src="app/components/GraphView/graphController.js"></script>
+
 
 <!-- route -->
 
