--- a/front/index.html
+++ b/front/index.html
@@ -10,6 +10,8 @@
 <!-- custom styles -->
 <link rel="stylesheet" href="assets/css/base.css">
 <link rel="stylesheet" href="assets/css/custom.css">
+<link rel="stylesheet" href="assets/css/font-awesome.css">
+
 
 
 <!--   ***** scripts  ***** -->
@@ -62,7 +64,7 @@
             <div class="row">
                 <div class="menuList">
                     <ul>
-                        <li ng-repeat="item in items" ng-click="changeSate(item)"><a href="{{item.href}}" ng-class="{'activeLi' : item.id == activeItem}"   class="listMiddle">{{item.title}}</a></li>
+                        <li ng-repeat="item in items" ng-click="changeSate(item)"><a href="{{item.href}}" ng-class="{'activeLi' : item.id == activeItem}"   class="listMiddle"><div class="{{item.icon}}"></div>  {{item.title}}</a></li>
                     </ul>
                 </div>
             </div>
