graph table static done

--- a/front/index.html
+++ b/front/index.html
@@ -23,20 +23,22 @@
 <script src="app/bower_components/jquery/dist/jquery.min.js"></script>
 <script src="app/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="assets/js/d3.min.js"></script>
+
 <!-- angular application code -->
 
 <script src="app/app.js"></script>
 <script src="app/config.js"></script>
-<script src="app/directives.js"></script>
 
-<!--  ng-include files -->
+<!--  directives -->
 
+<script src="app/directives/graphViewDirective.js"></script>
 
 <!-- controllers -->
 
 <script src="app/mainController.js"></script>
 <script src="app/components/searchBar/searchBarController.js"></script>
 <script src="app/components/GraphView/graphController.js"></script>
+<script src="app/components/GraphTable/graphTableController.js"></script>
 
 
 <!-- route -->
