--- a/front/index.html
+++ b/front/index.html
@@ -23,6 +23,7 @@
 <script src="app/bower_components/jquery/dist/jquery.min.js"></script>
 <script src="app/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="assets/js/d3.min.js"></script>
+<script src="app/bower_components/angularUtils-pagination/dirPagination.js"></script>
 
 <!-- angular application code -->
 
