graph working with names, weight, direction, click nearby dependecies

--- a/front/index.html
+++ b/front/index.html
@@ -16,6 +16,8 @@
 
 <!--   ***** scripts  ***** -->
 
+
+
 <!-- libraries -->
 
 <script src="app/bower_components/angular/angular.min.js"></script>
@@ -24,6 +26,9 @@
 <script src="app/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="assets/js/d3.min.js"></script>
 <script src="app/bower_components/angularUtils-pagination/dirPagination.js"></script>
+
+<!-- custom -->
+<script src="assets/js/scripts.js"></script>
 
 <!-- angular application code -->
 
