--- a/front/index.html
+++ b/front/index.html
@@ -46,6 +46,12 @@
 <script src="app/components/GraphView/graphController.js"></script>
 <script src="app/components/GraphTable/graphTableController.js"></script>
 
+<!-- services -->
+<script src="services/searchBarData.js"></script>
+<script src="services/createD3Node.js"></script>
+<script src="services/createD3Link.js"></script>
+
+
 
 <!-- route -->
 
