font awesome icone added

--- a/front/index.html
+++ b/front/index.html
@@ -10,7 +10,7 @@
 <!-- custom styles -->
 <link rel="stylesheet" href="assets/css/base.css">
 <link rel="stylesheet" href="assets/css/custom.css">
-<link rel="stylesheet" href="assets/css/font-awesome.css">
+<link rel="stylesheet" href="assets/font/font-awesome-4.7.0/css/font-awesome.min.css">
 
 
 
