traverse added to front, first graph loads with traverse

--- a/front/index.html
+++ b/front/index.html
@@ -47,6 +47,7 @@
 
 <!-- services -->
 <script src="services/searchBarData.js"></script>
+<script src="services/traverseData.js"></script>
 <script src="services/createD3Node.js"></script>
 <script src="services/createD3Link.js"></script>
 
