search techs node IDs are fetched correctly

--- a/front/index.html
+++ b/front/index.html
@@ -44,9 +44,11 @@
 <script src="app/components/searchBar/searchBarController.js"></script>
 <script src="app/components/GraphView/graphController.js"></script>
 <script src="app/components/GraphTable/graphTableController.js"></script>
+<script src="app/components/searchTechs/searchTechsController.js"></script>
 
 <!-- services -->
 <script src="services/searchBarData.js"></script>
+<script src="services/nodeNames.js"></script>
 <script src="services/traverseData.js"></script>
 <script src="services/createD3Node.js"></script>
 <script src="services/createD3Link.js"></script>
