--- a/front/index.html
+++ b/front/index.html
@@ -48,11 +48,14 @@
 <script src="app/components/searchTechs/secondPage/searchedTechsViewController.js"></script>
 
 <!-- services -->
-<script src="services/searchBarData.js"></script>
-<script src="services/nodeNames.js"></script>
-<script src="services/traverseData.js"></script>
-<script src="services/createD3Node.js"></script>
-<script src="services/createD3Link.js"></script>
+<script src="app/services/searchBarData.js"></script>
+<script src="app/services/nodeNames.js"></script>
+<script src="app/services/traverseData.js"></script>
+<script src="app/services/createD3Node.js"></script>
+<script src="app/services/createD3Link.js"></script>
+<script src="app/services/dataFormCtrlFunc.js"></script>
+<script src="app/services/graphCtrlDataFunc.js"></script>
+
 
 
 
